add notifications and add ratting
